objects/Relationship_Team__c.object
<CustomObject>
    <fields>
        <fullName>FormulaForUser__c</fullName>
        <formula>IF( Team_Member__r.Id == $User.Id , 1, 0 )</formula>
        <label>FormulaForUser</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <referenceTo>Relationship__c</referenceTo>
        <relationshipLabel>Relationship Teams</relationshipLabel>
        <relationshipName>Relationship_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Relationship_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Relationship Team</label>
    <nameField>
        <displayFormat>RT-{000000}</displayFormat>
        <label>Relationship Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>